--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.3",
-        "react/http": "0.2.*",
-        "silex/silex": "1.0.*@dev"
+        "react/http": "0.4.*",
+        "silex/silex": "1.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "*"
     },
     "autoload": {
-        "psr-0": { "React\\Espresso": "src" }
+        "psr-4": { "React\\Espresso\\": "src" }
     },
     "extra": {
         "branch-alias": {
