--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=5.3.3",
         "react/http": "0.4.*",
-        "silex/silex": "1.*"
+        "silex/silex": "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
