--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.3",
-        "react/http": "0.4.*",
+        "react/http": "~0.4",
         "silex/silex": "~1.2"
     },
     "require-dev": {
